--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,12 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery{
+  display: flex;
+  list-style-type: none;
+}
+.gallery-image {
+  padding: 10px;
+  width: 300px;
+}
